pkg/gateway/xds/translator/testdata/out/xds-ir/http-route-response-add-headers.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: response-header-route
      responseHeadersToAdd:
      - header:
          key: some-header
          value: some-value
      - header:
          key: some-header-2
          value: some-value
      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: some-header3
          value: some-value
      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: some-header4
          value: some-value
      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: empty-header
        keepEmptyValue: true
      route:
        cluster: response-header-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/response-header-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
